[tool.poetry]
name = "reinforcement_learning_sandbox"
version = "0.1.0"
description = "Reinforcement Learning Sandbox"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "rl" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
gymnasium = "^0.29.1"
swig = "^4.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"
# Supposedly quite fast, but need to figure out how to make it work with Neovim
ruff = "^0.1.5"


[tool.mypy]
files = "rl"
strict = true
namespace_packages = true
explicit_package_bases = true

# [tool.isort]
# profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["rl"]
